--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,16 +26,33 @@
         android:layout_alignLeft="@+id/imageView1"
         android:layout_below="@+id/imageView1"
         android:layout_marginTop="20dp"
-        android:text="@string/cmbs_status_heading" />
+        android:text="@string/cmbs_connected_heading" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="10dp"
+        android:text="@string/han_connected_device_heading" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
+        android:layout_above="@+id/textView3"
         android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@+id/textView1"
-        android:text="@string/disconnected" />
+        android:layout_toRightOf="@+id/textView3"
+        android:text="@string/no" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView3"
+        android:layout_alignBottom="@+id/textView3"
+        android:layout_alignLeft="@+id/textView2"
+        android:text="@string/not_available" />
 
 </RelativeLayout>
