--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:id="@+id/imageViewDspgLogo"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="75dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
@@ -71,5 +71,43 @@
         android:layout_alignBottom="@+id/textViewVersionName"
         android:layout_toLeftOf="@+id/textViewVersionName"
         android:text="@string/version_heading" />
+
+    <ScrollView
+        android:id="@+id/scrollViewHanDeviceTable"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_alignLeft="@+id/textViewHanConnectedDeviceHeading"
+        android:layout_below="@+id/textViewHanConnectedDeviceHeading"
+        android:layout_marginTop="20dp" >
+
+        <TableLayout
+            android:id="@+id/scrollViewHanDeviceTableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+			<TableRow>"
+				<TextView 
+					android:text="@string/unit_id"
+					android:width="150px"
+					style="@style/table_header_style"
+					/>
+				<TextView
+					android:text="@string/unit_type"
+					android:width="150px"
+					style="@style/table_header_style"
+					/>
+				<TextView
+					android:text="@string/unit_alert"
+					android:width="150px"
+					style="@style/table_header_style"
+					/>
+				<TextView
+					android:text="@string/unit_tamper"
+					android:width="150px"
+					style="@style/table_header_style"
+					/>
+			</TableRow>
+        </TableLayout>
+    </ScrollView>
 
 </RelativeLayout>
