--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,15 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="table_header_style" parent="android:Theme">
+        <item name="android:background">@xml/table_header_shape</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+    
+    <style name="table_content_style" parent="android:Theme">
+        <item name="android:background">@xml/table_content_shape</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
