--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/menu_setting"
+        android:orderInCategory="10"
+        android:showAsAction="never"
+        android:title="@string/menu_setting"/>
+        
+    <item
         android:id="@+id/menu_about"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_about"/>
+
 
 </menu>
