--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
     <ScrollView
         android:id="@+id/scrollViewHanDeviceTable"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_alignLeft="@+id/textViewHanConnectedDeviceHeading"
         android:layout_below="@+id/textViewHanConnectedDeviceHeading"
         android:layout_marginTop="20dp" >
@@ -88,7 +88,7 @@
 			<TableRow>"
 				<TextView 
 					android:text="@string/unit_id"
-					android:width="50dp"
+					android:width="20dp"
 					style="@style/table_header_style"
 					/>
 				<TextView
@@ -97,17 +97,42 @@
 					style="@style/table_header_style"
 					/>
 				<TextView
+					android:text="@string/unit_keep_alive"
+					android:width="60dp"
+					style="@style/table_header_style"
+					/>
+				<TextView
 					android:text="@string/unit_alert"
-					android:width="80dp"
+					android:width="60dp"
 					style="@style/table_header_style"
 					/>
 				<TextView
 					android:text="@string/unit_tamper"
-					android:width="80dp"
+					android:width="60dp"
 					style="@style/table_header_style"
 					/>
 			</TableRow>
         </TableLayout>
+    
     </ScrollView>
 
+    <Button
+        android:id="@+id/buttonAcOutletOn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/scrollViewHanDeviceTable"
+        android:layout_below="@+id/scrollViewHanDeviceTable"
+        android:onClick="buttonAcOutletOnHandler"
+        android:text="@string/on" />
+
+    <Button
+        android:id="@+id/buttonAcOutletOff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/buttonAcOutletOn"
+        android:layout_alignBottom="@+id/buttonAcOutletOn"
+        android:layout_toRightOf="@+id/buttonAcOutletOn"
+        android:onClick="buttonAcOutletOffHandler"
+        android:text="@string/off" />
+		
 </RelativeLayout>
